--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json -p 8001",
+    "start": "json-server --watch db.json --port 8001"
   },
   "dependencies": {
     "@stripe/stripe-js": "^2.1.6",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -23,6 +26,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "json-server": "^0.17.4",
     "postcss": "^8.4.30",
     "react-router-dom": "^6.16.0",
     "tailwindcss": "^3.3.3",
