--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "json-server --watch db.json -p 8001",
-    "start": "json-server --watch db.json --port 8001"
+    "start": "react-scripts start",
+    "json-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^2.1.6",
+    "@auth0/auth0-react": "^2.2.1",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
